[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon_backup.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Utils/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Grenade.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Move.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Summon.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/BossAnim.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/PermenKacamata.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Stun.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Dead.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Enemies/Boss/PermenKacamata/State/Shoot.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.0321, 30.0006 )

[node name="PermenKacamata" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="State" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Move" type="Node" parent="State"]
script = ExtResource( 4 )

[node name="PathTimer" type="Timer" parent="State/Move"]
one_shot = true

[node name="StateTimer" type="Timer" parent="State/Move"]
one_shot = true

[node name="Grenade" type="Node" parent="State"]
script = ExtResource( 3 )

[node name="Summon" type="Node" parent="State"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="State/Summon"]

[node name="Stun" type="Node" parent="State"]
script = ExtResource( 8 )

[node name="Dead" type="Node" parent="State"]
script = ExtResource( 9 )

[node name="Shoot" type="Node" parent="State"]
script = ExtResource( 10 )

[node name="ShootTimer" type="Timer" parent="State/Shoot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="SummoningPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SummoningPoints"]
[connection signal="timeout" from="State/Move/PathTimer" to="State/Move" method="_on_PathTimer_timeout"]
[connection signal="timeout" from="State/Move/StateTimer" to="State/Move" method="_on_StateTimer_timeout"]
[connection signal="timeout" from="State/Shoot/ShootTimer" to="State/Shoot" method="_on_ShootTimer_timeout"]
